# waving

./: .gitignore  CMakeLists.txt  README.md
cmake/: cpm.cmake
plugin/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  WaveData.cpp  WaveData.h
test/: CMakeLists.txt
