# enable_testing()

# add_executable(test_fir_vs_iir
#     test_fir_vs_iir/test_fir_vs_iir.cpp
# )

# target_include_directories(test_fir_vs_iir
#     PUBLIC
#     ${CMAKE_CURRENT_SOURCE_DIR}/../plugin
#     ${JUCE_SOURCE_DIR}/modules
# )

# target_link_libraries(test_fir_vs_iir 
#     WavingPlugin
# )

# add_test(test_fir_vs_iir
#     ${CMAKE_CURRENT_BINARY_DIR}/Debug/test_fir_vs_iir
# )